Fix all the linting errors